# OOP

./: .gitignore  Zhavoronok_Danila_lb1.pages  Zhavoronok_Danila_lb2.pages  Zhavoronok_Danila_lb2_OOP.pages  Zhavoronok_Danila_lb3_oop.pages  diagram.mdj  input  save.json
src/: CMakeLists.txt  Field.cpp  Field.h  FieldCell.cpp  FieldCell.h  Ship.cpp  Ship.h  ShipCell.cpp  ShipCell.h  ShipManager.cpp  ShipManager.h  main.cpp  utils.cpp  utils.h
src/exceptions/: NoSkillsAvailable.cpp  NoSkillsAvailable.h  NotInField.cpp  NotInField.h  ShipNear.cpp  ShipNear.h
src/game/: BotGame.cpp  BotGame.h  Game.h  GameState.cpp  GameState.h
src/infoHolders/: InfoHolder.h  SkillInfoHolder.cpp  SkillInfoHolder.h
src/players/: Bot.cpp  Bot.h  Player.h  User.cpp  User.h
src/serialization/: Deserialization.cpp  Deserialization.h  Serialization.cpp  Serialization.h
src/skills/: DoubleDamage.cpp  DoubleDamage.h  DoubleDamageFactory.cpp  DoubleDamageFactory.h  Scaner.cpp  Scaner.h  ScanerFactory.cpp  ScanerFactory.h  Shelling.cpp  Shelling.h  ShellingFactory.cpp  ShellingFactory.h  Skill.h  SkillFactory.h  SkillManager.cpp  SkillManager.h
